// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CommentForm /> should match a snapshot with a complex avatar badge 1`] = `
<div
  className="sc-EHOje jkvTMv"
>
  <div
    className="sc-bwzfXH fVTbJN"
  >
    <div
      className="sc-htpNat dEQIYH"
    >
      <div
        className="sc-ifAKCX eOkFuq"
      >
        <svg
          height="25"
          viewBox="0 0 20 20"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="10"
            cy="10"
            fill="#19b4fa"
            r="10"
          />
          <path
            d="M8.232 13.89l.707.706 5.656-5.657-1.414-1.415-4.243 4.243-2.122-2.122-1.414 1.415 2.828 2.83z"
            fill="#fff"
          />
        </svg>
      </div>
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents sc-bxivhb eOJfhC"
        tabIndex={null}
      >
        <img
          alt="Image alt"
          className="k-ButtonImage__img"
          src="#image"
        />
      </span>
    </div>
  </div>
  <div
    className="sc-bZQynM iZtGOe"
  >
    <div
      className="sc-gzVnrw iAreqW"
    >
      <textarea
        aria-describedby=""
        aria-invalid="false"
        aria-label=""
        aria-required="true"
        className="sc-htoDjs bwQFzg"
        defaultValue=""
        disabled={false}
        id={null}
        onChange={[Function]}
        placeholder="Leave a comment on the project"
        rows="1"
      />
      <div
        className="sc-dnqmqq iEcCzR"
      >
        <span
          className="sc-iwsKbI fhGaBs"
        />
      </div>
    </div>
    <div
      className="sc-bdVaJa bNTSMG"
    >
      <span
        className="k-u-color-error k-u-size-micro k-u-weight-regular"
        id=""
      >
        Cum sociis natoque penatibus et magnis
      </span>
    </div>
  </div>
</div>
`;

exports[`<CommentForm /> should match its empty snapshot 1`] = `
<div
  className="sc-EHOje jkvTMv"
>
  <div
    className="sc-bwzfXH fVTbJN"
  >
    <div
      className="sc-htpNat dEQIYH"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents sc-bxivhb eOJfhC"
        tabIndex={null}
      >
        <img
          alt="Image alt"
          className="k-ButtonImage__img"
          src="#image"
        />
      </span>
    </div>
  </div>
  <div
    className="sc-bZQynM iZtGOe"
  >
    <div
      className="sc-gzVnrw iAreqW"
    >
      <textarea
        aria-describedby=""
        aria-invalid="false"
        aria-label=""
        aria-required="true"
        className="sc-htoDjs bwQFzg"
        defaultValue=""
        disabled={false}
        id="custom-textarea-id"
        onChange={[Function]}
        placeholder="Leave a comment on the project"
        rows="1"
      />
      <div
        className="sc-dnqmqq iEcCzR"
      >
        <span
          className="sc-iwsKbI fhGaBs"
        />
      </div>
    </div>
    <div
      className="sc-bdVaJa bNTSMG"
    >
      <span
        className="k-u-color-error k-u-size-micro k-u-weight-regular"
        id=""
      >
        Cum sociis natoque penatibus et magnis
      </span>
    </div>
  </div>
</div>
`;
